[BUG #4817] Fixed css added -webkit-background-clip: padding-box; so that the background does not bleed into border
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@27146 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/framework/source/resource/qx/mobile/css/android/android.css
+++ b/qooxdoo/framework/source/resource/qx/mobile/css/android/android.css
@@ -81,6 +81,7 @@ a:hover { color: #e89c00; }
   padding-left: 20px;
   padding-right: 20px;
   margin-top: 15px;
+  -webkit-background-clip: padding-box;
 }
 
 
@@ -181,6 +182,7 @@ ul li input[type="text"], ul li input[type="password"], ul li textarea, ul li se
     outline: none;
     -webkit-appearance: textarea;
     -webkit-border-radius: .4em;
+    -webkit-background-clip: padding-box;
 }
 
 ul li textarea {
@@ -220,6 +222,7 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
     overflow: hidden;
     position:relative;
     -webkit-border-radius: 5px;
+    -webkit-background-clip: padding-box;
 }
 
 .toggleButton > div.checked {
@@ -240,6 +243,7 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
     position: absolute;
     top: 0px;
     left: -55px;
+    -webkit-background-clip: padding-box;
 }
 
 
@@ -247,15 +251,12 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
 
 .slider {
   position:relative;
-  border:1px solid #0E0E0F;
   height: 20px;
   background: -webkit-gradient(linear,left top,left bottom,from(#9EA09D), color-stop(0.85, #5B5D5A), color-stop(0.95, #5F615E), to(#757774)) 0px 0px no-repeat, -webkit-gradient(linear,left top,left bottom,from(#ecd343), color-stop(0.85, #fab907), color-stop(0.95, #f0b705), to(#f8ce2e));
   background: -webkit-linear-gradient(top, #9EA09D, #5B5D5A 85%,#5F615E 95%, #757774) 0px 0px no-repeat, -webkit-linear-gradient(top, #ecd343, #fab907 85%,#f0b705 95%, #f8ce2e) 0px 0px no-repeat;
   -webkit-border-radius: .6em;
-  boder-radius: .6em;
-  -moz-border-radius: .6em;
-  -o-border-radius: .6em;
   overflow: visible;
+  -webkit-background-clip: padding-box;
 }
 
 .slider > div {
@@ -265,16 +266,11 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
   background-color:#fff;
   width: 60px;
   height: 30px;
-  -box-shadow: 0 0 2px 1px #4A4A4A;
-  -webkit-box-shadow: 0 0 2px 1px #4A4A4A;
-  -moz-box-shadow: 0 0 2px 1px #4A4A4A;
-  -o-box-shadow: 0 0 2px 1px #4A4A4A;
   background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#c4c4c4));
   background: -webkit-linear-gradient(top, #f4f4f4, #c4c4c4);
-  boder-radius: .4em;
-  -moz-border-radius: .4em;
   -webkit-border-radius: .4em;
-  -o-border-radius: .4em;
+  -webkit-box-shadow: 0 0 2px 1px #4A4A4A;
+  -webkit-background-clip: padding-box;
 }
 
 
@@ -328,6 +324,7 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
     background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#c4c4c4));
     border: 2px solid #232323;
     -webkit-border-radius: 4px;
+    -webkit-background-clip: padding-box;
 }
 
 .navigationbar-button.active, .navigationbar-backbutton.active {
