--- a/qooxdoo/framework/source/resource/qx/mobile/css/ios/ios.css
+++ b/qooxdoo/framework/source/resource/qx/mobile/css/ios/ios.css
@@ -79,6 +79,7 @@ a:hover {  color:rgb(76, 86, 108); }
   padding-left: 20px;
   padding-right: 20px;
   margin-top: 15px;
+  -webkit-background-clip: padding-box;
 }
 
 
@@ -106,6 +107,7 @@ ul {
     padding: 0;
     -webkit-border-radius: 8px;
     margin-bottom: 10px;
+    -webkit-background-clip: padding-box;
 }
 
 ul li {
@@ -234,6 +236,7 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
     overflow: hidden;
     position:relative;
     -webkit-border-radius: 5px;
+    -webkit-background-clip: padding-box;
 }
 
 .toggleButton > div.checked {
@@ -254,6 +257,7 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
     position: absolute;
     top: 0px;
     left: -55px;
+    -webkit-background-clip: padding-box;
 }
 
 
@@ -269,10 +273,8 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
   background: -webkit-gradient(linear,left top,left bottom,from(#929292), color-stop(0.05, #bbbbbb), color-stop(0.5, #f6f6f6), to(#f9f9f9)) 0px 0px no-repeat, -webkit-gradient(linear,left top,left bottom,from(#093887), color-stop(0.05, #2a5db1), color-stop(0.9, #6ca9f7), to(#4e8ad4)) 0px 0px no-repeat;
   background: -webkit-linear-gradient(top, #929292, #bbbbbb 5%,#f6f6f6 50%, #f9f9f9) 0px 0px no-repeat, -webkit-linear-gradient(top, #093887, #2a5db1 5%,#6ca9f7 90%, #4e8ad4) 0px 0px no-repeat;
   -webkit-border-radius: .6em;
-  boder-radius: .6em;
-  -moz-border-radius: .6em;
-  -o-border-radius: .6em;
   overflow: visible;
+  -webkit-background-clip: padding-box;
 }
 
 .slider > div {
@@ -280,18 +282,13 @@ ul li input[type="checkbox"]:after, ul li input[type="radio"]:after {
   top: -8px;
   left: 0%;
   background-color:#fff;
-  -box-shadow: 0 0 2px 1px #a9a9a9;
   -webkit-box-shadow: 0 0 2px 1px #a9a9a9;
-  -moz-box-shadow: 0 0 2px 1px #a9a9a9;
-  -o-box-shadow: 0 0 2px 1px #a9a9a9;
   width: 30px;
   height: 30px;
   background: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5), color-stop(0.1,#d1d1d1), color-stop(0.7, #f4f4f4), to(#fcfcfc));
   background: -webkit-linear-gradient(top, #f5f5f5, #d1d1d1 10%, #f4f4f4 70%, #fcfcfc);
-  boder-radius: 1em;
-  -moz-border-radius: 1em;
   -webkit-border-radius: 1em;
-  -o-border-radius: 1em;
+  -webkit-background-clip: padding-box;
 }
 
 
